added some more css

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
     <header role="banner">
-        <div class="logo">
-            <h2>Parker Franzi</h2>
+        <div class="row">
+            <div class="logo">
+                <h2>Parker Franzi</h2>
+            </div>
+            <nav role="navigation">
+                <ul class="main-nav">
+                    <li>nav</li>
+                </ul>
+            </nav>
         </div>
-        <nav role="navigation">
-            <ul class="main-nav">
-                <p>nav</p>
-            </ul>
-        </nav>
     </header>
     
 
@@ -29,11 +31,13 @@
         <section>
             <div class="container">
                 <h2>About Me</h2>
-                <div class="col-6">
-                    <p>img</p>
-                </div>
-                <div class="col-6">
-                    <p>description</p>                
+                <div class="row">
+                    <div class="col-6">
+                        <p>img</p>
+                    </div>
+                    <div class="col-6">
+                        <p>description</p>                
+                    </div>
                 </div>
             </div>
         </section>
@@ -42,6 +46,14 @@
             <div class="container">
                 <h1>Projects</h1>
                 <h2>Quiz App</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <p>img</p>
+                    </div>
+                    <div class="col-6">
+                        <p>description</p>                
+                    </div>
+                </div>
             </div>
         </section>
     </main>
