index.html changes

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <header role="banner">
-        <div class="logo">
-            <h1>Parker Franzi</h1>
+        <div class="row">
+            <div class="logo">
+                <h1>Parker Franzi</h1>
+            </div>
+            <nav role="navigation">
+                <ul class="main-nav">
+                    <li><a class="about-button js-button" href="#" role="button">About Me</a></li>
+                    <li><a class="portfolio-button js-button" href="#" role="button">Portfolio</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav role="navigation">
-            <ul class="main-nav">
-                <li><a class="about-button js-button" href="#" role="button">About Me</a></li>
-                <li><a class="portfolio-button js-button" href="#" role="button">Portfolio</a></li>
-            </ul>
-        </nav>
     </header>
     
 
@@ -32,11 +34,13 @@
         <section>
             <div class="container">
                 <h2>About Me</h2>
-                <div class="col-6">
-                    <img src="profile-img.png" alt="profile picture of me" />
-                </div>
-                <div class="col-6">
-                    <p>I'm a Web Developer currently living in the beautiful Bend, OR. I have a life-long passion for computers, especially web development. I love the creativity associated with web development and a sense of accomplishment when the project meets or exceeds clients expectations. I strive for efficiency and pride myself on hard work.  When not developing my interests include gaming, sports, cooking, technology.</p>
+                <div class="row">
+                    <div class="col-6">
+                        <img src="profile-img.png" alt="profile picture of me" />
+                    </div>
+                    <div class="col-6">
+                        <p>I'm a Web Developer currently living in the beautiful Bend, OR. I have a life-long passion for computers, especially web development. I love the creativity associated with web development and a sense of accomplishment when the project meets or exceeds clients expectations. I strive for efficiency and pride myself on hard work.  When not developing my interests include gaming, sports, cooking, technology.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -45,20 +49,28 @@
             <div class="container">
                 <h1>Projects</h1>
                 <h2>Quiz App</h2>
-                <p>Using jQuery and manipulating form fields I create a single page app that was made from scratch given a series of user and technical requirements to be user-friendly and responsive.  Some of the requirements include:</p>
-                <ul class="requirements-list">
-                    <li>Button to start the quiz</li>
-                    <li>Only one question at a time</li>
-                    <li>Can see current score and what question number they're on</li>
-                    <li>Provide feedback and what the right answer was</li>
-                </ul>
-                <ul class="tech-used">
-                    <li><img src="html5.png" alt="html5 logo" /></li>
-                    <li><img src="css3.png" alt="html5 logo" /></li>
-                    <li><img src="js.png" alt="html5 logo" /></li>
-                    <li><img src="jquery.png" alt="html5 logo" /></li>
-                    <li><img src="GitHub.png" alt="html5 logo" /></li>
-                </ul>
+                <div class="row">
+                    <div class="col-6">
+
+                    </div>
+                    <div class="col-6">
+                        <p>Using jQuery and manipulating form fields I create a single page app that was made from scratch given a series of user and technical requirements to be user-friendly and responsive.  Some of the requirements include:</p>
+                        <ul class="requirements-list">
+                            <li>Button to start the quiz</li>
+                            <li>Only one question at a time</li>
+                            <li>Can see current score and what question number they're on</li>
+                            <li>Provide feedback and what the right answer was</li>
+                        </ul>
+                        <ul class="tech-used">
+                            <li><img src="html5.png" alt="html5 logo" /></li>
+                            <li><img src="css3.png" alt="html5 logo" /></li>
+                            <li><img src="js.png" alt="html5 logo" /></li>
+                            <li><img src="jquery.png" alt="html5 logo" /></li>
+                            <li><img src="GitHub.png" alt="html5 logo" /></li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
