--- a/index.html
+++ b/index.html
@@ -68,18 +68,20 @@
                     <div class="col-6">
                         <img src="quiz-app.png" alt="screenshot of my quiz app" />
                         <div class="links">
-                            <a class="link-button" href="https://github.com/ParkerFranzi/quiz-app">GitHub Repo</a>
-                            <a class="link-button" href="https://parkerfranzi.github.io/quiz-app/">Live</a> 
+                            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/quiz-app">GitHub Repo</a>
+                            <a class="link-button" target="_blank" href="https://parkerfranzi.github.io/quiz-app/">Live</a> 
                         </div>
                     </div>
                     <div class="col-6">
-                        <p>Using jQuery and manipulating form fields I create a single page app that was made from scratch given a series of user and technical requirements to be user-friendly and responsive.  Some of the requirements include:</p>
+                        <p>Using jQuery and manipulating form fields I create a single page app.  This was made from scratch given a series of user and technical requirements to be user-friendly and responsive.</p>
+                        <!--
                         <ul class="requirements-list">
                             <li>Button to start the quiz</li>
                             <li>Only one question at a time</li>
                             <li>Can see current score and question number</li>
                             <li>Provide feedback and what the right answer was</li>
                         </ul>
+                        -->
                         <ul class="tech-used">
                             <li><img src="html5.png" alt="html5 logo" /></li>
                             <li><img src="css3.png" alt="html5 logo" /></li>
@@ -97,8 +99,8 @@
         <div class="container">
             <h1>Contact</h1>
             <a class="link-button" href="mailto:parker@franziweb.com">Email</a>
-            <a class="link-button" href="https://github.com/ParkerFranzi/">GitHub</a>
-            <a class="link-button" href="https://www.linkedin.com/in/parkerfranzi/">LinkedIn</a>
+            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/">GitHub</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/parkerfranzi/">LinkedIn</a>
         </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
