--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <p>Using jQuery and manipulating form fields I create a single page app.  This was made from scratch given a series of user and technical requirements to be user-friendly and responsive.</p>
+                        <p>Think you know sports?  Test your knowledge about some of the greatest athletes to compete in their sports.  Try to get better than 80% correct.</p>
                         <!--
+                        <p>Using jQuery and manipulating form fields I create a single page app.  This was made from scratch given a series of user and technical requirements to be user-friendly and responsive.</p>
                         <ul class="requirements-list">
                             <li>Button to start the quiz</li>
                             <li>Only one question at a time</li>
