new interests added

--- a/index.html
+++ b/index.html
@@ -74,15 +74,6 @@
                     </div>
                     <div class="col-6">
                         <p>Think you know sports?  Test your knowledge about some of the greatest athletes to compete in their sports.  Try to get better than 80% correct.</p>
-                        <!--
-                        <p>Using jQuery and manipulating form fields I create a single page app.  This was made from scratch given a series of user and technical requirements to be user-friendly and responsive.</p>
-                        <ul class="requirements-list">
-                            <li>Button to start the quiz</li>
-                            <li>Only one question at a time</li>
-                            <li>Can see current score and question number</li>
-                            <li>Provide feedback and what the right answer was</li>
-                        </ul>
-                        -->
                         <ul class="tech-used">
                             <li><img src="html5.png" alt="html5 logo" /></li>
                             <li><img src="css3.png" alt="html5 logo" /></li>
@@ -92,7 +83,25 @@
                         </ul>
                     </div>
                 </div>
-
+                <div class="row">
+                    <div class="col-6">
+                        <img src="new-interests.png" alt="screenshot of my new interests app" />
+                        <div class="links">
+                            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/new-interests">GitHub Repo</a>
+                            <a class="link-button" target="_blank" href="https://parkerfranzi.github.io/new-interests/">Live</a> 
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <p>Looking for something new to fill your time?  New interests takes your current favorite author, book, game, movie, podcast or TV show and provides you with a bunch of similar things that you may not have known existed!</p>
+                        <ul class="tech-used">
+                            <li><img src="html5.png" alt="html5 logo" /></li>
+                            <li><img src="css3.png" alt="html5 logo" /></li>
+                            <li><img src="js.png" alt="html5 logo" /></li>
+                            <li><img src="jquery.png" alt="html5 logo" /></li>
+                            <li><img src="GitHub.png" alt="html5 logo" /></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
