added title to project

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <section class="projects-banner">
             <div class="container">
                 <h1>Projects</h1>
-                <h2>Quiz App</h2>
                 <div class="row">
+                    <h2>Quiz App</h2>
                     <div class="col-6">
                         <img src="quiz-app.png" alt="screenshot of my quiz app" />
                         <div class="links">
@@ -84,6 +84,7 @@
                     </div>
                 </div>
                 <div class="row">
+                    <h2>New Interests API App</h2>
                     <div class="col-6">
                         <img src="new-interests.png" alt="screenshot of my new interests app" />
                         <div class="links">
