--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>HTML wireframe</title>
+    <title>Parker Franzi Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -76,10 +76,10 @@
                         <p>Think you know sports?  Test your knowledge about some of the greatest athletes to compete in their sports.  Try to get better than 80% correct.</p>
                         <ul class="tech-used">
                             <li><img src="html5.png" alt="html5 logo" /></li>
-                            <li><img src="css3.png" alt="html5 logo" /></li>
-                            <li><img src="js.png" alt="html5 logo" /></li>
-                            <li><img src="jquery.png" alt="html5 logo" /></li>
-                            <li><img src="GitHub.png" alt="html5 logo" /></li>
+                            <li><img src="css3.png" alt="css3 logo" /></li>
+                            <li><img src="js.png" alt="javascript logo" /></li>
+                            <li><img src="jquery.png" alt="jQuery logo" /></li>
+                            <li><img src="GitHub.png" alt="GitHub logo" /></li>
                         </ul>
                     </div>
                 </div>
@@ -96,10 +96,35 @@
                         <p>Looking for something new to fill your time?  New interests takes your current favorite author, book, game, movie, podcast or TV show and provides you with a bunch of similar things that you may not have known existed!</p>
                         <ul class="tech-used">
                             <li><img src="html5.png" alt="html5 logo" /></li>
-                            <li><img src="css3.png" alt="html5 logo" /></li>
-                            <li><img src="js.png" alt="html5 logo" /></li>
-                            <li><img src="jquery.png" alt="html5 logo" /></li>
-                            <li><img src="GitHub.png" alt="html5 logo" /></li>
+                            <li><img src="css3.png" alt="css3 logo" /></li>
+                            <li><img src="js.png" alt="javascript logo" /></li>
+                            <li><img src="jquery.png" alt="jQuery logo" /></li>
+                            <li><img src="GitHub.png" alt="GitHub logo" /></li>
+                        </ul>
+                    </div>
+                </div>
+                <h2>Family Recipes Full Stack App</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <img src="family-recipes.png" alt="screenshot of my new interests app" />
+                        <div class="links">
+                            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/family-recipes">GitHub Repo</a>
+                            <a class="link-button" target="_blank" href="https://family-recipes.parkerfranzi.now.sh">Live</a> 
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <p>Love to eat you family get together traditional foods?  Family recipes allows small groups of family and friends to share their favorite recipes with each other so you can try to recreate that delicious food you've grown to love</p>
+                        <ul class="tech-used">
+                            <li><img src="html5.png" alt="html5 logo" /></li>
+                            <li><img src="css3.png" alt="css3 logo" /></li>
+                            <li><img src="js.png" alt="javascript logo" /></li>
+                            <li><img src="jquery.png" alt="jQuery logo" /></li>
+                            <li><img src="GitHub.png" alt="GitHub logo" /></li>
+                        </ul>
+                        <ul class="tech-used">
+                            <li><img src="react.png" alt="React logo" /></li>
+                            <li><img src="node.png" alt="Node logo" /></li>
+                            <li><img src="postgresql.png" alt="PostgreSQL logo" /></li>
                         </ul>
                     </div>
                 </div>
@@ -109,7 +134,7 @@
     <section class="contact-banner">
         <div class="container">
             <h1>Contact</h1>
-            <a class="link-button" href="mailto:parker@franziweb.com">Email</a>
+            <a class="link-button" href="mailto:parker.franzi@gmail.com">Email</a>
             <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/">GitHub</a>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/parkerfranzi/">LinkedIn</a>
         </div>
