added old websites section

--- a/index.html
+++ b/index.html
@@ -63,23 +63,27 @@
         <section class="projects-banner">
             <div class="container">
                 <h1>Projects</h1>
-                <h2>Quiz App</h2>
+                <h2>Family Recipes Full Stack App</h2>
                 <div class="row">
                     <div class="col-6">
-                        <img src="quiz-app.png" alt="screenshot of my quiz app" />
+                        <img src="family-recipes.png" alt="screenshot of my new interests app" />
                         <div class="links">
-                            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/quiz-app">GitHub Repo</a>
-                            <a class="link-button" target="_blank" href="https://parkerfranzi.github.io/quiz-app/">Live</a> 
+                            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/family-recipes">GitHub Repo</a>
+                            <a class="link-button" target="_blank" href="https://family-recipes.parkerfranzi.now.sh">Live</a> 
                         </div>
                     </div>
                     <div class="col-6">
-                        <p>Think you know sports?  Test your knowledge about some of the greatest athletes to compete in their sports.  Try to get better than 80% correct.</p>
+                        <p>Love to eat you family get together traditional foods?  Family recipes allows small groups of family and friends to share their favorite recipes with each other so you can try to recreate that delicious food you've grown to love</p>
                         <ul class="tech-used">
                             <li><img src="html5.png" alt="html5 logo" /></li>
                             <li><img src="css3.png" alt="css3 logo" /></li>
                             <li><img src="js.png" alt="javascript logo" /></li>
-                            <li><img src="jquery.png" alt="jQuery logo" /></li>
+                            <li><img src="react.png" alt="React logo" /></li>
                             <li><img src="GitHub.png" alt="GitHub logo" /></li>
+                        </ul>
+                        <ul class="tech-used">
+                            <li><img src="node.png" alt="Node logo" /></li>
+                            <li><img src="postgresql.png" alt="PostgreSQL logo" /></li>
                         </ul>
                     </div>
                 </div>
@@ -103,17 +107,17 @@
                         </ul>
                     </div>
                 </div>
-                <h2>Family Recipes Full Stack App</h2>
+                <h2>Quiz App</h2>
                 <div class="row">
                     <div class="col-6">
-                        <img src="family-recipes.png" alt="screenshot of my new interests app" />
+                        <img src="quiz-app.png" alt="screenshot of my quiz app" />
                         <div class="links">
-                            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/family-recipes">GitHub Repo</a>
-                            <a class="link-button" target="_blank" href="https://family-recipes.parkerfranzi.now.sh">Live</a> 
+                            <a class="link-button" target="_blank" href="https://github.com/ParkerFranzi/quiz-app">GitHub Repo</a>
+                            <a class="link-button" target="_blank" href="https://parkerfranzi.github.io/quiz-app/">Live</a> 
                         </div>
                     </div>
                     <div class="col-6">
-                        <p>Love to eat you family get together traditional foods?  Family recipes allows small groups of family and friends to share their favorite recipes with each other so you can try to recreate that delicious food you've grown to love</p>
+                        <p>Think you know sports?  Test your knowledge about some of the greatest athletes to compete in their sports.  Try to get better than 80% correct.</p>
                         <ul class="tech-used">
                             <li><img src="html5.png" alt="html5 logo" /></li>
                             <li><img src="css3.png" alt="css3 logo" /></li>
@@ -121,13 +125,21 @@
                             <li><img src="jquery.png" alt="jQuery logo" /></li>
                             <li><img src="GitHub.png" alt="GitHub logo" /></li>
                         </ul>
-                        <ul class="tech-used">
-                            <li><img src="react.png" alt="React logo" /></li>
-                            <li><img src="node.png" alt="Node logo" /></li>
-                            <li><img src="postgresql.png" alt="PostgreSQL logo" /></li>
-                        </ul>
                     </div>
                 </div>
+                <h2>Previous Work Projects</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <p>Over the years I have built or worked on numerous projects mostly involving content management systems such as WordPress, Joomla, and Shopify.  Here is a list of a few of the bigger clients I have done work with via past agency or freelance.  I would like to note website redesigns happen and what their current site has may not be representative of my work which may have taken place years ago.</p>
+                        <ul>
+                            <li><a href="https://www.zolomedia.com" target="_blank">Zolo Media</a></li>
+                            <li><a href="https://www.paleomagazine.com" target="_blank">Paleo Magazine</a></li>
+                            <li><a href="https://www.sevenpeaksventures.com" target="_blank">Seven Peaks Ventures</a></li>
+                            <li><a href="https://www.kidscenter.org" target="_blank">Kids Center</a></li>
+                            <li><a href="https://www.corkandbarrel.org" target="_blank">Cork and Barrel</a></li>
+                        </ul>
+                    </div>
+                </div>             
             </div>
         </section>
     </main>
